# google_scholar_mcp

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/google_scholar_mcp/: __init__.py  core.py
tests/: test_scholar.py
