[project]
name = "google-scholar-mcp"
version = "0.1.0"
description = "MCP server for Google Scholar search"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "googletrans>=4.0.2",
    "httpx>=0.28.1",
    "mcp[cli]>=1.7.0",
    "scholarly>=1.7.11",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
]

[project.scripts]
google-scholar-mcp = "google_scholar_mcp:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.9.0",
    "pyright>=1.1.400",
]

[tool.hatch.build.targets.wheel]
packages = ["src/google_scholar_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pyright]
typeCheckingMode = "standard"
pythonVersion = "3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
